test/spec_vectors/global/fail/module_38.wat
(module (global $x (mut i32) (i32.const 0)) (func $type-global.set-value-empty-in-block (i32.const 0) (block (global.set $x))))